# Epistemically-Verified-AI

./: .gitignore  README.md  pyproject.toml  setup.cfg
eva/: __init__.py  core.py  difficulty.py  reliability.py  stability.py  utils.py  verification.py
examples/: demo.py
src/eva/: __init__.py  core.py  difficulty.py  reliability.py  stability.py  utils.py  verification.py
src/eva.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_eva.py
