[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eva"
version = "0.1.0"
description = "Epistemically Verified AI"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scikit-learn",
    "sentence-transformers"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
